# mlops-databricks

./: .gitignore  LICENSE  databricks.yml  pyproject.toml  requirements.txt
files/: project_config_bank.yml
notebooks/: 01_bank_bronze_setup.py  10a_deployment_evaluation.py  10b_deployment_approval_check.py  10c_deploy_champion_and_score.py  batch_inference.py  deployment job.py  drift detection.py  feature engineering.py  mlflow_model_training.py  model monitoring.py  model_monitoring_fixed.py  model_registry.py  model_train_hpo_optuna.py
src/bank_marketing/: config.py  data_process.py  feature_engineering.py  process_data.py
