[project]
name = "mlops-databricks-bank-marketing"
version = "0.1.0"
description = "Databricks MLOps project for Bank Marketing dataset using MLflow, Unity Catalog, Databricks Asset Bundles, and GitHub Actions"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []