[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bank-marketing"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
  "mlflow==2.19.0",
  "scikit-learn==1.6.1",
  "lightgbm==4.5.0",
  "databricks-sdk==0.44.0",
  "pydantic==2.10.6",
  "loguru==0.7.3",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "databricks-connect>=16.3,<17",
  "ipykernel>=6.29.0",
]

[tool.setuptools.packages.find]
where = ["src"]